--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.18",
+    "ethers": "^6.15.0",
+    "formidable": "^3.5.4",
+    "ipfs-http-client": "^60.0.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
@@ -34,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.3",
