--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "genai-next": "file:",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
+    "mongoose": "^8.18.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
