Added blockchain services

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-google-maps/api": "^2.20.7",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +31,8 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
+    "puppeteer": "^24.22.0",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
